--- a/AssetsTools/AssetsTools.csproj
+++ b/AssetsTools/AssetsTools.csproj
@@ -34,8 +34,9 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="IOLib">
-      <HintPath>.\IOLib.dll</HintPath>
+    <Reference Include="IOLib, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\library\IOLib.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
