--- a/IOLibProfiler/IOLibProfiler.csproj
+++ b/IOLibProfiler/IOLibProfiler.csproj
@@ -33,8 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="IOLib">
-      <HintPath>..\AssetsTools\IOLib.dll</HintPath>
+    <Reference Include="IOLib, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\library\IOLib.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
