--- a/AssetsTools/AssetsTools.csproj
+++ b/AssetsTools/AssetsTools.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Extensions\StreamExtensions.cs" />
     <Compile Include="ISerializable.cs" />
     <Compile Include="Lz4DecoderStream.cs" />
+    <Compile Include="MemoryPool.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SevenZipHelper.cs" />
   </ItemGroup>
