--- a/AssetsTools/AssetsTools.csproj
+++ b/AssetsTools/AssetsTools.csproj
@@ -38,6 +38,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\library\IOLib.dll</HintPath>
     </Reference>
+    <Reference Include="Lz4Codec, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\library\Lz4Codec.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
