--- a/AssetsTools/AssetsTools.csproj
+++ b/AssetsTools/AssetsTools.csproj
@@ -71,7 +71,15 @@
     <Compile Include="7zip\ICoder.cs" />
     <Compile Include="AssetBundleFile.Files.cs" />
     <Compile Include="AssetBundleFile.cs" />
+    <Compile Include="AssetsFile.cs" />
+    <Compile Include="AssetsFile.Externals.cs" />
+    <Compile Include="AssetsFile.Header.cs" />
+    <Compile Include="AssetsFile.Metadata.cs" />
+    <Compile Include="AssetsFile.Objects.cs" />
+    <Compile Include="AssetsFile.Scripts.cs" />
+    <Compile Include="BuildTarget.cs" />
     <Compile Include="Class1.cs" />
+    <Compile Include="ClassIDType.cs" />
     <Compile Include="Color4.cs" />
     <Compile Include="Extensions\BinaryReaderExtensions.cs" />
     <Compile Include="Extensions\BinaryWriterExtentions.cs" />
@@ -82,6 +90,8 @@
     <Compile Include="MemoryPool.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SevenZipHelper.cs" />
+    <Compile Include="TypeTree.CommonString.cs" />
+    <Compile Include="TypeTree.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssetBundleFile.Header.cs" />
