--- a/AssetsTools/AssetsTools.csproj
+++ b/AssetsTools/AssetsTools.csproj
@@ -69,7 +69,7 @@
     <Compile Include="Extensions\BinaryReaderExtensions.cs" />
     <Compile Include="Extensions\BinaryWriterExtentions.cs" />
     <Compile Include="Extensions\StreamExtensions.cs" />
-    <Compile Include="IOLibExtentions.cs" />
+    <Compile Include="IOLibExtensions.cs" />
     <Compile Include="ISerializable.cs" />
     <Compile Include="MemoryPool.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
