--- a/AssetsTools/AssetsTools.csproj
+++ b/AssetsTools/AssetsTools.csproj
@@ -66,6 +66,10 @@
     <Compile Include="Class1.cs" />
     <Compile Include="ClassIDType.cs" />
     <Compile Include="Color4.cs" />
+    <Compile Include="DynamicAsset.Deserializer.cs" />
+    <Compile Include="DynamicAsset.CodeGen.cs" />
+    <Compile Include="DynamicAsset.cs" />
+    <Compile Include="DynamicAssetArray.cs" />
     <Compile Include="Extensions\BinaryReaderExtensions.cs" />
     <Compile Include="Extensions\BinaryWriterExtentions.cs" />
     <Compile Include="Extensions\StreamExtensions.cs" />
@@ -73,6 +77,7 @@
     <Compile Include="ISerializable.cs" />
     <Compile Include="MemoryPool.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SerializedType.cs" />
     <Compile Include="TypeTree.CommonString.cs" />
     <Compile Include="TypeTree.cs" />
   </ItemGroup>
@@ -82,6 +87,6 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy $(TargetDir)$(TargetFileName) $(SolutionDir)library\$(TargetFileName)</PostBuildEvent>
+    <PostBuildEvent>xcopy /Y /D $(TargetDir)$(TargetFileName) $(SolutionDir)library\$(TargetFileName)</PostBuildEvent>
   </PropertyGroup>
 </Project>
