--- a/AssetsTools/AssetsTools.csproj
+++ b/AssetsTools/AssetsTools.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Extensions\BinaryReaderExtensions.cs" />
     <Compile Include="Extensions\BinaryWriterExtentions.cs" />
     <Compile Include="Extensions\StreamExtensions.cs" />
+    <Compile Include="ILGeneratorExtension.cs" />
     <Compile Include="IOLibExtensions.cs" />
     <Compile Include="ISerializable.cs" />
     <Compile Include="MemoryPool.cs" />
