--- a/AssetsTools/AssetsTools.csproj
+++ b/AssetsTools/AssetsTools.csproj
@@ -65,16 +65,20 @@
     <Compile Include="BuildTarget.cs" />
     <Compile Include="ClassIDType.cs" />
     <Compile Include="Color4.cs" />
+    <Compile Include="DynamicAsset.Cache.cs" />
     <Compile Include="DynamicAsset.Deserializer.cs" />
     <Compile Include="DynamicAsset.CodeGen.cs" />
     <Compile Include="DynamicAsset.cs" />
     <Compile Include="DynamicAssetArray.cs" />
+    <Compile Include="IDynamicAssetBase.cs" />
+    <Compile Include="DynamicAssetDictionary.cs" />
     <Compile Include="ILGeneratorExtension.cs" />
     <Compile Include="IOLibExtensions.cs" />
     <Compile Include="ISerializable.cs" />
     <Compile Include="MemoryPool.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerializedType.cs" />
+    <Compile Include="TypeExtensions.cs" />
     <Compile Include="TypeTree.CommonString.cs" />
     <Compile Include="TypeTree.cs" />
   </ItemGroup>
