--- a/Lz4Codec/Lz4Codec.csproj
+++ b/Lz4Codec/Lz4Codec.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy /Y /D $(TargetDir)$(TargetFileName) $(SolutionDir)library\$(TargetFileName)</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
 </Project>
