--- a/IOLibTest/IOLibTest.csproj
+++ b/IOLibTest/IOLibTest.csproj
@@ -39,10 +39,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="IOLib, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\library\IOLib.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\MSTest.TestFramework.1.3.2\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.dll</HintPath>
     </Reference>
@@ -61,6 +57,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\IOLib\IOLib.csproj">
+      <Project>{6139561e-62d1-4e7f-abd8-acc1ea168857}</Project>
+      <Name>IOLib</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Lz4Codec\Lz4Codec.csproj">
       <Project>{c692495b-2b2b-4373-bf6a-74f5f5f323ca}</Project>
       <Name>Lz4Codec</Name>
